<resources>
    <string name="app_name">RAPS</string>
    <string name="Login_Button">LOG IN</string>
    <string name="Signin_Button">SIGN UP</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="home">Home</string>
</resources>
