<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity">






    <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="#d7d9e4"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:id="@+id/name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:background="#d7d9e4"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:id="@+id/last_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:background="#d7d9e4"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:id="@+id/e_mail"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="#d7d9e4"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:id="@+id/password"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Signin_Button"
            android:background="@drawable/button"
            android:layout_marginTop="15dp"
            android:onClick="onClick"
            android:padding="10dp"
            android:id="@+id/signupButton"
            />



    </LinearLayout>

</RelativeLayout>
