<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="sp2016.cs310.com.raps.LoginActivity">








        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginTop="60dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:background="#d7d9e4"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:id="@+id/login_e_mail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="#d7d9e4"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:id="@+id/login_pw" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_Button"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:background="@drawable/button"
            android:id="@+id/loginButton"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:id="@+id/registerLink"
            />




    </LinearLayout>

</RelativeLayout>
